fix mobile spacing

--- a/style.css
+++ b/style.css
@@ -278,8 +278,8 @@ footer {
 
 @media all and (min-device-width: 0px) and (max-device-width: 480px) {
   #predict { display: none; }
-  #daniel {font-size: 32px;}
-  #imagefilm {width: 100%; padding: none; display: block; font-size:24px;}
+  #daniel {font-size: 3vw; line-height: 4vw;}
+  #imagefilm {width: 100%; padding: none; display: block; font-size:4vw; line-height:5vw;}
   #imagecreds {display: none;}
   #creds {display: none;}
   #webcreds{display: none;}
